<resources>
    <string name="app_name">LWRP Admin</string>
    <string name="administration">Администрация</string>
    <string name="newAdminPassword">Новый админ-пароль</string>
    <string name="repeatNewAdminPassword">Повторите новый админ-пароль</string>
    <string name="changeAdminPassword">Смена админ-пароля</string>
    <string name="currentAccountPassword">Текущий пароль от аккаунта</string>
    <string name="currentAdminPassword">Текущий админ-пароль</string>
    <string name="defaultNickName">Nick_Name</string>
    <string name="experience">Опыт</string>
    <string name="defaultExperience">0/120</string>
    <string name="level">Уровень</string>
    <string name="defaultLevel">0</string>
    <string name="fractionPlayers">Игроков во фракции</string>
    <string name="defaultFractionPlayers">0</string>
    <string name="accountDetails">Подробная информация</string>
    <string name="leader">Лидер фракции</string>
    <string name="defaultFraction">0</string>
    <string name="status">Статус</string>
    <string name="defaultGetonDate">13:00, 12.05.2020</string>
    <string name="offline">Оффлайн</string>
    <string name="getonDate">Последний заход</string>
    <string name="logoDescription">Логотип приложения</string>
    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="nickname">Имя игрока</string>
    <string name="signIn">С возвращением!</string>
    <string name="changePassword">Сменить пароль</string>
    <string name="changePasswordDescription">Изменение админ-пароля</string>
    <string name="adminsOnlineDescription">Полная информация об админах в сети</string>
    <string name="adminsOnline">Администрация в сети</string>
    <string name="leaderList">Список лидеров</string>
    <string name="leaderListDescription">Все лидеры организаций и информация</string>
    <string name="mainMenu">Главное меню</string>
    <string name="myStats">Моя статистика</string>
    <string name="myStatsDescription">Отыгранные часы и выданные наказания</string>
    <string name="statsTimesDefault">0 раз</string>
    <string name="statsDefaultTime">0 часов 00 минут</string>
    <string name="jailed">Посадил в тюрьму</string>
    <string name="tuesday">Вторник</string>
    <string name="defaultAdminLevel">0</string>
    <string name="monday">Понедельник</string>
    <string name="thursday">Четверг</string>
    <string name="wednesday">Среда</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="reportsAnswered">Ответил на репорты</string>
    <string name="sunday">Воскресенье</string>
    <string name="muted">Заглушил игроков</string>
    <string name="defaultAdminWarns">0/0</string>
    <string name="aWarnCount">Количество предупреждений</string>
    <string name="inGameTime">Игровое время</string>
    <string name="notEnoughTimePlayedWarning">Внимание! Норма за сегодня не выполнена!</string>
    <string name="actionStats">Статистика действий</string>
    <string name="admin">Администратор</string>
    <string name="adminLevelText">уровня</string>
    <string name="gang_map">Информация о бандах</string>
    <string name="gang_map_description">Количество территорий и состав банд</string>
    <string name="groveStreet">Grove Street</string>
    <string name="territoryCount">Количество территорий</string>
    <string name="ballas">Ballas</string>
    <string name="lastUpdate">Обновлено</string>
    <string name="aztecas">Aztecas</string>
    <string name="rifa">Rifa</string>
    <string name="vagos">Vagos</string>
    <string name="ipInfo">Информация об IP</string>
    <string name="retrieveInfo">Получить информацию</string>
    <string name="currentData">Текущие данные</string>
    <string name="unknown">Неизвестно</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="provider">Провайдер</string>
    <string name="defaultIp">00.00.00.00</string>
    <string name="currentIp">Текущий IP</string>
    <string name="regData">Регистрационные данные</string>
    <string name="regIp">Регистрационный IP</string>
    <string name="ip_info_description">Данные о регистрационном и текущем IP</string>
    <string name="server_error">Ошибка сервера, повторите позже.</string>
    <string name="player_not_found">Данного игрока не существует в базе.</string>
    <string name="time_template">%d часов %d минут</string>
    <string name="count_template">%d раз</string>
    <string name="wrong_pass">Неправильный логин или пароль</string>
    <string name="not_an_admin">Данный пользователь не является администратором сервера</string>
    <string name="exit">Выход</string>
    <string name="exit_description">Выйти из аккаунта</string>
    <string name="minutesFrom">минут из</string>
    <string name="services">СЕРВИСЫ</string>
    <string name="adminLevel">Администратор %d уровня</string>
    <string name="timeRequestDescription">Отыграна норма по игровому времени</string>
    <string name="reportsAnsweredDescription">Всего отвечено на репорты</string>
    <string name="times">раз</string>
    <string-array name="fractionNames">
        <item>-</item>
        <item>LSPD</item>
        <item>FBI</item>
        <item>-</item>
        <item>Федеральный госпиталь</item>
        <item>La Cosa Nostra</item>
        <item>Yakuza</item>
        <item>Мэрия Los Santos</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Автошкола</item>
        <item>Ballas Gang</item>
        <item>Vagos Gang</item>
        <item>Russian Mafia</item>
        <item>Grove Street Gang</item>
        <item>Weazel News</item>
        <item>Aztecas Gang</item>
        <item>Rifa Gang</item>
        <item>-</item>
        <item>Армия USA</item>
        <item>-</item>
        <item>Street Racers Club</item>
        <item>Байкеры</item>
        <item>Hitmans</item>
        <item>S.W.A.T</item>
        <item>Правительство</item>
        <item>Военно Морской Флот</item>
        <item>-</item>
        <item>-</item>
    </string-array>
</resources>