<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.AdminPasswordChangeActivity">

    <EditText
        android:id="@+id/newAdminPasswordField"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/newAdminPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextLite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentAdminPasswordField" />

    <EditText
        android:id="@+id/repeatNewAdminPasswordField"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/repeatNewAdminPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextLite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAdminPasswordField" />

    <View
        android:id="@+id/leaderlisttopbar2"
        android:elevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/rounded_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:elevation="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/changeAdminPassword"
        android:textAlignment="viewStart"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/leaderlisttopbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leaderlisttopbar2" />

    <EditText
        android:id="@+id/currentPasswordField"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/currentAccountPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextLite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderlisttopbar2" />

    <EditText
        android:id="@+id/currentAdminPasswordField"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/currentAdminPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/colorTextLite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPasswordField" />

    <Button
        android:id="@+id/changePasswordButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_accent_item"
        android:elevation="0dp"
        android:onClick="onChangePasswordButtonClick"
        android:text="@string/changePassword"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatNewAdminPasswordField" />

    <ProgressBar
        android:id="@+id/progressBar3"
        android:elevation="20dp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/leaderlisttopbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leaderlisttopbar2" />
</androidx.constraintlayout.widget.ConstraintLayout>